Release R2012:
==============
- fix: usage=obsolete produces uncompilable code
- fix: resolved compile issues related to array.h

Release R2011:
==============
- enhancement: AString should be suitable for bytes type
- enhancement: array needs emplace_back
- enhancement: per default operator == and operator != generation
- enhancement: support eraseing repeated elements via setByName
- fix: astring.h compile error
- fix: AString needs push_back(char)
- fix: FString needs some fixes
- fix: array should only use memmove/memcmp for PODs
- fix: putparam should respect stringtype
- fix: setByName(f,0) does not clear valid bit
- fix: JSON output of unknown enums should be formated as integer

Release R2007:
==============
- enhancement: code optimization for ASCII output
- enhancement: better protection against corrupt data
- fix: potential stack corruption in JSON bytes output
- fix: remove superfluous check (ud.vi < 0)

Release R2005:
==============
- enhancement: added option to en-/disable use of ID 0
- enhancement: WFC should exit with EXIT_FAILURE on all errors
- enhancement: JSON and ASCII of unkown enums as decimal integer
- enhancement: parsing of enum values in setByValue
- enhancement: reduced JSON code size
- enhancement: updated early decoding and moved from beta to stable
- fix: several fixes related to JSON output generation
- fix: added missing boundary check for string assignment
- enhancement: JSON validation integrated in test-suite
- buildenv: updated autoconf scripts, check that xxd is available
- porting: update for Cygwin

Release R2003:
==============
- enhancement: added option to set field ascii parsing function
- enhancement: ascii output should include unset fields
- enhancement: clear() should reset the member to the default value
- enhancement: support to clear field with setByName(value = 0)
- enhancement: support to add element with setByName("element[+]",...)
- fix: assertion failure with multiple field options